* remove one api from both code and doc
* remove one api from code

* remove one api from doc
