# src/main/java/com/sanity/scan/controller/UserController.java
@@ -28,28 +28,11 @@ public class UserController {
         return user;
     }
 
-    @PostMapping("/user/create/password")
-    User createUserVar(@RequestBody User user, @RequestParam(required=true) String password) {
-        System.out.println("createUserVar");
-        user.setInfo("OK");
-        System.out.println(user);
-        System.out.println("password:" + password);
-        return user;
-    }
-
     @GetMapping(value = "/user/get/byEmail/{email}")
     public User getUserByEmail(@PathVariable("email") String email) {
         System.out.println("getUserByEmail");
         System.out.println(email);
         User user = userService.getUserByEmail(email);
-        return user;
-    }
-
-    @GetMapping(value = "/user/get/byId/{id}")
-    public User getUserById(@PathVariable("id") Long id) {
-        System.out.println("getUserById");
-        System.out.println(id);
-        User user = userService.getUserById(id);
         return user;
     }
 
