# src/main/resources/swagger/sanity-scan-swagger.json
@@ -110,44 +110,6 @@
 				}
 			}
 		},
-		"/runCommand/{cmd}": {
-			"get": {
-				"tags": [
-					"util-controller"
-				],
-				"summary": "runCommand",
-				"operationId": "runCommandUsingGET",
-				"produces": [
-					"*/*"
-				],
-				"parameters": [
-					{
-						"name": "cmd",
-						"in": "path",
-						"description": "cmd",
-						"required": true,
-						"type": "string"
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "OK",
-						"schema": {
-							"type": "string"
-						}
-					},
-					"401": {
-						"description": "Unauthorized"
-					},
-					"403": {
-						"description": "Forbidden"
-					},
-					"404": {
-						"description": "Not Found"
-					}
-				}
-			}
-		},
 		"/user/create/cart": {
 			"post": {
 				"tags": [
@@ -339,45 +301,6 @@
 						"description": "email",
 						"required": true,
 						"type": "string"
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "OK",
-						"schema": {
-							"$ref": "#/definitions/User"
-						}
-					},
-					"401": {
-						"description": "Unauthorized"
-					},
-					"403": {
-						"description": "Forbidden"
-					},
-					"404": {
-						"description": "Not Found"
-					}
-				}
-			}
-		},
-		"/user/get/byId/{id}": {
-			"get": {
-				"tags": [
-					"user-controller"
-				],
-				"summary": "getUserById",
-				"operationId": "getUserByIdUsingGET",
-				"produces": [
-					"*/*"
-				],
-				"parameters": [
-					{
-						"name": "id",
-						"in": "path",
-						"description": "id",
-						"required": true,
-						"type": "integer",
-						"format": "int64"
 					}
 				],
 				"responses": {
